# nyxpay

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audits/: README.md
programs/nyxpay_program/: Cargo.toml  README.md
programs/nyxpay_program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/devnet/: deploy.sh
scripts/localnet/: setup.sh
scripts/testing/: run_tests.sh
wallet/: README.md
wallet/privacy/: README.md
wallet/tx-builder/: README.md
wallet/ui/: README.md
zk/: README.md
zk/future/: placeholder.md
zk/specs/: circuit-boundaries.md  proof-statements.md  verification-flow.md
