[package]
name = "nyxpay_program"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "NyxPay on-chain program for private payments on Solana"
repository = "https://github.com/nyxpay/nyxpay"

[lib]
crate-type = ["cdylib", "lib"]
name = "nyxpay_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.18.0"
borsh = "1.3.0"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
solana-validator = "~1.18.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
